--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "basiclightbox": "^5.0.4",
     "lodash.debounce": "^4.0.8"
   }
