--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://Anna-Dominika1.github.io/GoIteens_project1",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url ./GoIteens_project1/"
+    "build": "parcel build src/*.html --public-url ./"
   },
   "repository": {
     "type": "git",
